Update makefile, convert taintQuery to Clang 3.6.

--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -65,6 +65,7 @@ BUILDDIR := build
 all: make_builddir \
 	emit_build_config \
 	$(BUILDDIR)/example \
+	$(BUILDDIR)/taintQuery
 
 .PHONY: emit_build_config
 emit_build_config: make_builddir
@@ -78,6 +79,9 @@ $(BUILDDIR)/example: example.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
+$(BUILDDIR)/taintQuery: taintQuery.cpp
+	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
+		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
 .PHONY: clean
 clean:
