Factor out taint query tool into tool and header.

--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -65,7 +65,7 @@ BUILDDIR := build
 all: make_builddir \
 	emit_build_config \
 	$(BUILDDIR)/example \
-	$(BUILDDIR)/taintQuery
+	$(BUILDDIR)/taintQueryTool
 
 .PHONY: emit_build_config
 emit_build_config: make_builddir
@@ -79,7 +79,7 @@ $(BUILDDIR)/example: example.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
-$(BUILDDIR)/taintQuery: taintQuery.cpp
+$(BUILDDIR)/taintQueryTool: taintQueryTool.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
