Make LAVA one tool, remove Clang plugin.

--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -71,8 +71,7 @@ BUILDDIR := build
 all: make_builddir \
 	emit_build_config \
 	$(BUILDDIR)/example \
-	$(BUILDDIR)/lavaTaintQueryTool #\
-#	$(BUILDDIR)/lavaTaintQueryPlugin.so
+	$(BUILDDIR)/lavaTool
 
 .PHONY: emit_build_config
 emit_build_config: make_builddir
@@ -86,13 +85,9 @@ $(BUILDDIR)/example: example.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
-$(BUILDDIR)/lavaTaintQueryTool: lavaTaintQueryTool.cpp lavaTaintQuery.h
+$(BUILDDIR)/lavaTool: lavaTool.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
-
-#$(BUILDDIR)/lavaTaintQueryPlugin.so: lavaTaintQueryPlugin.cpp lavaTaintQuery.h
-#	$(CXX) $(PLUGIN_CXXFLAGS) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) \
-#		$^ $(PLUGIN_LDFLAGS) $(LLVM_LDFLAGS_NOLIBS) -o $@
 
 .PHONY: clean
 clean:
