--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -70,7 +70,8 @@ BUILDDIR := build
 .PHONY: all
 all: make_builddir \
 	emit_build_config \
-	$(BUILDDIR)/lavaTool
+	$(BUILDDIR)/lavaTool\
+	$(BUILDDIR)/lavaBugInsertion
 
 .PHONY: emit_build_config
 emit_build_config: make_builddir
@@ -86,6 +87,11 @@ includes.h.gch: includes.h
 $(BUILDDIR)/lavaTool: lavaTool.cpp lavaDB.cpp includes.h.gch
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) lavaTool.cpp lavaDB.cpp \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
+
+$(BUILDDIR)/lavaBugInsertion: lavaBugInsertion.cpp
+	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) lavaBugInsertion.cpp \
+		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
+
 
 .PHONY: clean
 clean:
