able to inject a bug -- tshark compiles but havent tested resulting binary

--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -29,8 +29,8 @@ $(info Using LLVM_BIN_PATH = $(LLVM_BIN_PATH))
 $(info -----------------------------------------------)
 
 CXX := g++
-CXXFLAGS := -fno-rtti -O0 -g -std=c++11 -lpq
-PLUGIN_CXXFLAGS := -fpic
+CXXFLAGS := -fexceptions -fno-rtti -O0 -g -std=c++11 -lpq
+PLUGIN_CXXFLAGS := -fpic -fexceptions
 
 LLVM_CXXFLAGS := `$(LLVM_BIN_PATH)/llvm-config --cxxflags`
 LLVM_LDFLAGS := `$(LLVM_BIN_PATH)/llvm-config --ldflags --libs --system-libs`
