Fix DB to be parameterized by JSON file.

--- a/panda/Makefile
+++ b/panda/Makefile
@@ -1,5 +1,5 @@
-LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq 
-CXXFLAGS= -I ../../panda/qemu -I ../../panda/qemu/panda -D PANDALOG_READER  -std=c++11 -O2 -g
+LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq -ljsoncpp
+CXXFLAGS= -I ../../panda/qemu -I ../../panda/qemu/panda -D PANDALOG_READER  -std=c++11 -O2 -g -I/usr/include/jsoncpp
 
 all: fbi
 
