--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -28,8 +28,8 @@ $(info Using LLVM_BUILD_PATH = $(LLVM_BUILD_PATH))
 $(info Using LLVM_BIN_PATH = $(LLVM_BIN_PATH))
 $(info -----------------------------------------------)
 
-CXX := g++
-CXXFLAGS := -fexceptions -fno-rtti -O0 -g -std=c++11 -lpq -I/usr/include/jsoncpp -ljsoncpp
+CXX := g++ 
+CXXFLAGS := -fexceptions -fno-rtti -O0 -g -std=c++11 -lpq -I/usr/include/jsoncpp -ljsoncpp -fno-omit-frame-pointer
 PLUGIN_CXXFLAGS := -fpic -fexceptions
 
 LLVM_CXXFLAGS := `$(LLVM_BIN_PATH)/llvm-config --cxxflags`
