Finish revising FBI.

--- a/panda/Makefile
+++ b/panda/Makefile
@@ -24,8 +24,9 @@ fbi_sources=find_bug_inj.cpp \
 			../include/lava-odb.cxx
 
 ../include/lava-odb.cxx: ../include/lava.hxx
-	odb -d pgsql --std c++11 -o ../include --generate-query --generate-schema \
-		--cxx-prologue '#include "../include/pgarray.hxx"' $<
+	odb -d pgsql --std c++14 -o ../include --generate-query --generate-schema \
+		--cxx-prologue '#include "../include/pgarray.hxx"' --sql-name-case lower \
+		--generate-session $<
 
 fbi_objs=$(addsuffix .o,$(basename $(fbi_sources)))
 
