Further changes to update lavaTool.

--- a/src_clang/Makefile
+++ b/src_clang/Makefile
@@ -32,7 +32,7 @@ $(info -----------------------------------------------)
 #CXX := g++
 #CXXFLAGS := -fexceptions -fno-rtti -O0 -g -std=c++11 -I/usr/include/jsoncpp
 CXX := g++
-CXXFLAGS := -fexceptions -O0 -g -std=c++11 -lpq -I/usr/include/jsoncpp -ljsoncpp -fno-omit-frame-pointer
+CXXFLAGS := -fexceptions -O0 -g -std=c++11 -I/usr/include/jsoncpp -fno-omit-frame-pointer
 
 PLUGIN_CXXFLAGS := -fpic -fexceptions
 
@@ -42,7 +42,7 @@ LLVM_LDFLAGS := $(shell $(LLVM_BIN_PATH)/llvm-config --ldflags --libs)
 LLVM_LDFLAGS_NOLIBS := $(shell $(LLVM_BIN_PATH)/llvm-config --ldflags)
 PLUGIN_LDFLAGS := -shared
 
-OTHER_LIBS := -lpq -ljsoncpp
+OTHER_LIBS := -lpq -ljsoncpp -pthread -ltinfo -ldl -L/usr/local/lib
 
 CLANG_INCLUDES := \
 	-I$(LLVM_SRC_PATH)/tools/clang/include \
@@ -86,15 +86,27 @@ emit_build_config: make_builddir
 make_builddir:
 	@test -d $(BUILDDIR) || mkdir $(BUILDDIR)
 
+%.o: %.cpp
+	$(CXX) -c -o $@ $< $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES)
+
+%.o: %.cxx
+	$(CXX) -c -o $@ $< $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES)
+
+%.o: %.c
+	$(CC) -c -o $@ $< $(CFLAGS)
+
 includes.h.gch: includes.h
 	$(CXX) -c $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^
 
-$(BUILDDIR)/lavaTool: lavaTool.cpp lavaDB.cpp includes.h.gch ../sql/lava_sql.cpp 
-	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) lavaTool.cpp lavaDB.cpp ../sql/lava_sql.cpp \
-		$(CLANG_LIBS) $(LLVM_LDFLAGS) $(OTHER_LIBS) -o $@
+$(BUILDDIR)/lavaTool: lavaTool.o lavaDB.o ../include/lava-odb.o
+	$(CXX) $(CLANG_LIBS) $(LLVM_LDFLAGS) $(OTHER_LIBS) -o $@
 
+../include/lava-odb.cxx: ../include/lava.hxx
+	LD_LIBRARY_PATH=/usr/local/lib odb -d pgsql --std c++11 -o ../include \
+	--generate-query --generate-schema --cxx-prologue '#include "../include/pgarray.hxx"' \
+	--sql-name-case lower $<
 
 .PHONY: clean
 clean:
-	rm -rf $(BUILDDIR)/* *~
+	rm -rf $(BUILDDIR)/* *~ *.o ../include/lava-odb.o
 
