Changes for panda2.

--- a/fbi/Makefile
+++ b/fbi/Makefile
@@ -1,8 +1,11 @@
+include panda.mak
+
 LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq -ljsoncpp -lodb-pgsql -lodb
-CFLAGS= -I ../../panda/qemu -I ../../panda/qemu/panda \
-		  -D PANDALOG_READER -O2 -g \
-		  -I/usr/include/jsoncpp -D LAVA -D PANDA_LAVA \
-		  -I/usr/lib/odb/x86_64-linux-gnu/include
+CFLAGS= -I$(PANDA_SRC_PATH)/panda/include \
+		-I$(PANDA_BUILD_DIR)/i386-softmmu \
+		-D PLOG_READER -O2 -g \
+		-I/usr/include/jsoncpp -D LAVA -D PANDA_LAVA \
+		-I/usr/lib/odb/x86_64-linux-gnu/include
 CXXFLAGS=$(CFLAGS) -std=c++14
 
 all: fbi
@@ -18,8 +21,8 @@ all: fbi
 
 fbi_sources=find_bug_inj.cpp \
 			../src_clang/lavaDB.cpp \
-			../../panda/qemu/panda/pandalog.c \
-			../../panda/qemu/panda/pandalog.pb-c.c \
+			$(PANDA_SRC_PATH)/panda/src/plog.c \
+			$(PANDA_BUILD_DIR)/i386-softmmu/plog.pb-c.c \
 			../include/lava-odb.cxx
 
 ../include/lava-odb.cxx: ../include/lava.hxx
