began adding docker and setup scripts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,14 +3,20 @@ FROM m4mbr3/lava32
 MAINTAINER ricky
 
 WORKDIR /home/lava
-
+COPY sources.list /etc/apt/
 RUN apt-get update
-RUN apt-get install -y --force-yes gcc bzip2 bison flex libglib2.0-dev libpcap-dev make
-RUN wget https://www.wireshark.org/download/src/all-versions/wireshark-1.8.2.tar.bz2
-RUN tar -xvf wireshark-1.8.2.tar.bz2
-WORKDIR wireshark-1.8.2
-RUN ./configure --disable-warnings-as-errors --enable-editcap=no \
---enable-capinfos=no --enable-mergecap=no --enable-text2pcap=no \
---enable-dftest=no --enable-randpkt=no --enable-airpcap=no \
---enable-dumpcap=no --enable-rawshark=no --enable-wireshark=no
-RUN make -j32
+RUN apt-get install -y --force-yes gcc bzip2 bison flex libglib2.0-dev \
+libpcap-dev make gdb python-pip python-dev build-essential libpq-dev bc \
+realpath jq
+RUN pip install --upgrade pip
+COPY requirements.txt /tmp/
+RUN pip install -r /tmp/requirements.txt
+
+#RUN wget https://www.wireshark.org/download/src/all-versions/wireshark-1.8.2.tar.bz2
+#RUN tar -xvf wireshark-1.8.2.tar.bz2
+#WORKDIR wireshark-1.8.2
+#RUN ./configure --disable-warnings-as-errors --enable-editcap=no \
+#--enable-capinfos=no --enable-mergecap=no --enable-text2pcap=no \
+#--enable-dftest=no --enable-randpkt=no --enable-airpcap=no \
+#--enable-dumpcap=no --enable-rawshark=no --enable-wireshark=no
+#RUN make -j32
