Added checks for installed packages and dock perms
setup.py is now doesn't require sudo after the first run.
this is convenient in that if you already have your lava environment
set up and working, you may want to check that it is consistent
by running `python setup.py`.  If sudo request is asked, that means
that something is inconsistent in your environment and you should investigate
the cause of the inconsistency.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM m4mbr3/lava32
 
 RUN echo deb http://httpredir.debian.org/debian wheezy-backports main >> /etc/apt/sources.list
 RUN apt-get update
-RUN apt-get install -y bc jq git build-essential python python-colorama
+RUN apt-get install -y bc jq git build-essential python python-colorama zsh
 RUN apt-get install -y libjsoncpp-dev
 
 ENV release 3.6.2
