Make Debug+Asserts llvm build in debug docker.

--- a/docker/debug/Dockerfile
+++ b/docker/debug/Dockerfile
@@ -11,3 +11,7 @@ ENV LANGUAGE en_US
 ENV LC_ALL en_US.utf8
 
 RUN apt-get -y install sudo gdb vim emacs exuberant-ctags hexedit
+
+WORKDIR /$llvm_version
+RUN ./configure --disable-optimized --enable-assertions --enable-targets=x86 --enable-shared --enable-pic --host=i486-linux-gnu --build=i486-linux-gnu
+RUN REQUIRES_RTTI=1 make -j $(nproc)
